Fix: Overflow items on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -357,7 +357,7 @@ Products
 
 .product-item:hover {
 	transform: scale(1.1);
-	background-size: 18rem;
+	background-size: 16rem;
 	cursor: pointer;
 	-webkit-transform: scale(1.1);
 	-moz-transform: scale(1.1);
